--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/trguenther/backyard-watering#readme",
   "dependencies": {
-    "mcp-spi-adc": "^2.0.3",
-    "pigpio": "^1.1.2"
+    "mcp-spi-adc": "~3.0",
+    "pigpio": "~2.0"
   }
 }
